<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_sheet_bg"
    android:orientation="vertical">

    <ghasemi.abbas.book.components.TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_font"
        app:tv_bold="true"
        app:tv_color="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividerColor" />

    <ghasemi.abbas.book.components.TextView
        android:id="@+id/font_1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:gravity="center|right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/font_name_1"
        app:tv_color="@color/textTitleColor" />

    <ghasemi.abbas.book.components.TextView
        android:id="@+id/font_2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:gravity="center|right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/font_name_2"
        app:tv_color="@color/textTitleColor" />

    <ghasemi.abbas.book.components.TextView
        android:id="@+id/font_3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:gravity="center|right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/font_name_3"
        app:tv_color="@color/textTitleColor" />


    <ghasemi.abbas.book.components.TextView
        android:id="@+id/font_4"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:background="?selectableItemBackground"
        android:gravity="center|right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/font_name_4"
        app:tv_color="@color/textTitleColor" />


</LinearLayout>