<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_sheet_bg"
    android:orientation="vertical">

    <ghasemi.abbas.book.ui.components.TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:text="@string/filter_search"
        app:tv_bold="true"
        app:tv_color="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividerColor" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="20dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableEnd="?android:listChoiceIndicatorSingle"
            android:drawableTint="@color/colorAccent"
            android:paddingRight="5dp"
            android:text="@string/search_all"
            android:textColor="@color/textTitleColor"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableEnd="?android:listChoiceIndicatorSingle"
            android:drawableTint="@color/colorAccent"
            android:text="@string/search_in_page"
            android:textColor="@color/textTitleColor"
            android:textSize="14dp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/sl_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ghasemi.abbas.book.ui.components.CheckBox.SmoothCheckBox
            android:id="@+id/s_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:color_checked="@color/colorAccent"
            app:color_unchecked="@color/backgroundColor" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/search_title"
            app:tv_color="@color/textTitleColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sl_context"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ghasemi.abbas.book.ui.components.CheckBox.SmoothCheckBox
            android:id="@+id/s_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:color_checked="@color/colorAccent"
            app:color_unchecked="@color/backgroundColor" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/search_context"
            app:tv_color="@color/textTitleColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sl_similar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ghasemi.abbas.book.ui.components.CheckBox.SmoothCheckBox
            android:id="@+id/s_similar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:color_checked="@color/colorAccent"
            app:color_unchecked="@color/backgroundColor" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/search_similar"
            app:tv_color="@color/textTitleColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sl_fav"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:background="?selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ghasemi.abbas.book.ui.components.CheckBox.SmoothCheckBox
            android:id="@+id/s_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:color_checked="@color/colorAccent"
            app:color_unchecked="@color/backgroundColor" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/dont_search_fav"
            app:tv_color="@color/textTitleColor" />

    </LinearLayout>


</LinearLayout>