<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/ic_launcher2" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            app:tv_bold="true"
            app:tv_size="22"
            app:tv_color="@color/textTitleColor" />

        <ghasemi.abbas.book.ui.components.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/splash_text_1"
            app:tv_size="18"
            app:tv_color="@color/textTitleColor" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <ghasemi.abbas.book.ui.components.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/splash_text_2"
        app:tv_color="@color/textColor" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/launcher_bg" />
</FrameLayout>